--- a/views/work_program_view.xml
+++ b/views/work_program_view.xml
@@ -7,7 +7,7 @@
             <tree editable="bottom">
                 <field name="user_id" string="Utilisateur associé" options="{'no_create_edit': True}" class="form-control"/>
                 <field name="name" string="Nom du programme" invisible="1"/>
-                <field name="month" widget="selection" string="Mois"/>
+                <field name="my_month" widget="selection" string="Mois"/>
                 <field name="week_of" string="Semaine de"/>
                 <field name="project_id" string="Projet / Programme" widget="many2one"/>
                 <field name="activity_id" string="Activité" widget="many2one" domain="[('sub_process_id.process_id.domain_id', '=', project_id)]"/>
@@ -23,7 +23,6 @@
                 <field name="actual_deadline" string="Date limite réelle"/>
                 <field name="responsible_id" string="Responsable" widget="many2one"/>
                 <field name="support_ids" string="Support" widget="many2many_tags"/>
-                <!--field name="status" widget="selection" string="Statut"/-->
                 <field name="completion_percentage" string="Pourcentage d'achèvement"/>
                 <field name="satisfaction_level" widget="selection" string="Niveau de satisfaction"/>
                 <field name="comments" string="Commentaires / Remarques"/>
@@ -36,16 +35,18 @@
         <field name="model">work.program</field>
         <field name="arch" type="xml">
             <form string="Programme de Travail">
-                <!--header>
-                    <field name="status" widget="statusbar" clickable="True"/>
-                </header-->
+
                 <sheet>
                     <group>
                         <group string="Informations Générales">
                             <field name="user_id" string="Utilisateur associé " options="{'no_create_edit': True}" class="form-control"/>
                             <field name="name" string="Nom du programme" invisible="1"/>
-                            <field name="month" widget="selection" string="Mois"/>
-                            <field name="week_of" string="Semaine de"/>
+                            <field name="my_month" widget="selection" string="Mois" />
+
+                            <field name="week_of" string="Semaine de" invisible="1"/>
+
+                            <field name="my_week_of" string="Selection semaine en cours"/>
+
                             <field name="project_id" string="Projet / Programme" widget="many2one"/>
                         </group>
                         <group string="Détails de la Tâche">
@@ -76,6 +77,12 @@
                         <field name="comments" string="Commentaires / Remarques" widget="text"/>
                     </group>
                 </sheet>
+                
+                <div class="oe_chatter">
+                    <field name="message_follower_ids" widget="mail_followers"/>
+                    <field name="activity_ids" widget="mail_activity"/>
+                    <field name="message_ids" widget="mail_thread"/>
+                </div>
             </form>
         </field>
     </record>
